5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1800_2564.log
== TEST (2019-06-06 10:43:43) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

i = 0
v = 0
e = 0
d = 0
while(i < size(ng)):
	for k in ng:
	for n in ga:
	if(k > n):
		v = v + 1
	elif(k == m):
		e = e + 1
	else:
		d = d + 1
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 14
    for n in ga:
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:50:28) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

i = 0
v = 0
e = 0
d = 0
r = zeros(3,dtype=int)
while(i < size(ng)):
	for k in ng:
	for n in ag:
	if(k > n):
		v = v + 1
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 15
    for n in ag:
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:50:45) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

i = 0
v = 0
e = 0
d = 0
r = zeros(3,dtype=int)
while(i < size(ng)):
	for k in ng:
	for n in ga:
	if(k > n):
		v = v + 1
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 15
    for n in ga:
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:13) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

i = 0
v = 0
e = 0
d = 0
r = zeros(3,dtype=int)
while(i < size(ng)):
	for k in ng:
		v = k - ga[i]
		if(v > 0):
			v = v + 1
		elif(v == 0):
			e = e + 1
		else:
			d = d + 1
	i = i + 1 

print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:55:26) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

i = 0
x = 0
v = 0
e = 0
d = 0
r = zeros(3,dtype=int)
while(i < size(ng)):
	for k in ng:
		x = k - ga[i]
		if(x > 0):
			v = v + 1
		elif(x == 0):
			e = e + 1
		else:
			d = d + 1
	i = i + 1 

print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:56:23) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

i = 0
x = 0
v = 0
e = 0
d = 0
r = zeros(3,dtype=int)
while(i < size(ng)):
	for k in ng:
		x = k - ga[i]
	if(x > 0):
		v = v + 1
	elif(x == 0):
		e = e + 1
	else:
		d = d + 1
	i = i + 1 

print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:58:03) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

i = 0
x = 0
v = 0
e = 0
d = 0
r = zeros(3,dtype=int)
while(i < size(ng)):
	for k in ng:
		x = k - ga[i]
	if(x > 0):
		v = v + 1
	elif(x == 0):
		e = e + 1
	else:
		d = d + 1
	i = i + 1 

print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:20) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

for i in ng:
	gf = ng[i]
for k in ag:
	gs = ga[k]
print(gf)
print(gs)
#print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:49) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

for i in ng:
	gf = ng[i]
for k in ga:
	gs = ga[k]
print(gf)
print(gs)
#print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:04:39) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))
w = 0
v = 0
e = 0
d = 0
while(size(ng)>w):
	for i in ng:
		gf = ng[i]
	for k in ga:
		gs = ga[k]
	if(gf > gs):
		v = v + 1
	elif(gf == gs):
		e = e + 1
	else:
		d = d + 1
	w = w + 1
print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:12) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

x = zeros(3, dtype=int)

for i in range(size(ng)):
	if(ng[i]>ga[i]):
		x[0] = x[0] + 1
	elif(ng[i] == ga[i]):
		x[1] = x[1] + 1
	elif(ng[i] < ga[i]):
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:30) 
-- CODE:
from numpy import *

# numero de gols em cada partida
ng = array(eval(input("Insira: ")))
# numero de gols do time adv.
ga = array(eval(input("Insira: ")))

x = zeros(3, dtype=int)

for i in range(size(ng)):
	if(ng[i]>ga[i]):
		x[0] = x[0] + 1
	elif(ng[i] == ga[i]):
		x[1] = x[1] + 1
	elif(ng[i] < ga[i]):
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.15842
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
